--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
         <link rel="icon" href="css/img/sda_icon.png" type="image/x-icon">
     </head>
     <body>
+        <script>
+            if ('addEventListener' in document) {
+	document.addEventListener('DOMContentLoaded', function() {
+		FastClick.attach(document.body);
+	}, false);
+}
+        </script>
         <!-- FaceWidget -->
 <div id="fb-root"></div>
 <script>(function(d, s, id) {
@@ -213,5 +220,6 @@
             </div>
         </div>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-        <script src="js/main.js"></script>
+        <script type='application/javascript' src="js/main.js"></script>
+        <script type='application/javascript' src='js/fastclick.js'></script>
     </body>
