--- a/fichtec.html
+++ b/fichtec.html
@@ -10,6 +10,13 @@
         <link rel="icon" href="css/img/sda_icon.png" type="image/x-icon">
     </head>
     <body>
+        <script>
+            if ('addEventListener' in document) {
+	document.addEventListener('DOMContentLoaded', function() {
+		FastClick.attach(document.body);
+	}, false);
+}
+        </script>
         <nav id="navbar">
             <div id="navbox">
                 <a id="navlogo" href="index.html" target="_self"></a>
@@ -152,5 +159,6 @@
             </div>
         </div>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-        <script src="js/main.js"></script>
+        <script type='application/javascript' src="js/main.js"></script>
+        <script type='application/javascript' src='js/fastclick.js'></script>
     </body>
