--- a/expo.html
+++ b/expo.html
@@ -102,8 +102,8 @@
                     <img src="css/img/img6.jpg" style="width:100%">
                     <div class="text">sem destino a</div>
                 </div>
-                <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-                <a class="next" onclick="plusSlides(1)">&#10095;</a>
+                <div class="prev" onclick="plusSlides(-1)">&#10094;</div>
+                <div class="next" onclick="plusSlides(1)">&#10095;</div>
                 <div class="dot_holder">
                     <span class="dot" onclick="currentSlide(1)"></span>
                     <span class="dot" onclick="currentSlide(2)"></span> 
